[tool.poetry]
name = "tinydb"
version = "4.7.1"
description = "TinyDB is a tiny, document oriented database optimized for your happiness :)"
authors = ["Markus Siemens <markus@m-siemens.de>"]
license = "MIT"

readme = "README.rst"

homepage = "https://github.com/msiemens/tinydb"
documentation = "https://tinydb.readthedocs.org/"

keywords = ["database", "nosql"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

packages = [
    { include = "tinydb" }
]

[tool.poetry.urls]
"Changelog" = "https://github.com/msiemens/tinydb/en/latest/changelog.html"
"Issues" = "https://github.com/msiemens/tinydb/issues"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = { version = "^3.10.0 || ^4.0.0", python = "<=3.7" }

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-pycodestyle = "^2.3.1"
pytest-cov = "^4.0.0"
pycodestyle = "^2.10.0"
sphinx = "^5.3.0"
coveralls = "^3.3.1"
pyyaml = "^6.0"
pytest-mypy = { version = "^0.10.2", markers = "platform_python_implementation != 'PyPy'" }
types-PyYAML = "^5.4.3"
typing-extensions = { version = "^4.4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
